# OSCR

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  shell.nix
.github/workflows/: build.yml
OSCR/: __init__.py  baseparser.py  cli.py  combat.py  constants.py  datamodels.py  detection.py  export.py  iofunc.py  liveparser.py  main.py  oscr_read_file_backwards.py  parser.py  utilities.py
