[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "STO-OSCR"
dependencies = [
  "numpy==2.2.4"
]
requires-python = ">=3.13"
authors = []
maintainers = []
description = "Open Source Combatlog Reader for Star Trek Online."
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.optional-dependencies]
gui = []
cli = []

[project.urls]
Homepage = "https://github.com/STOCD/OSCR"
Repository = "https://github.com/STOCD/OSCR.git"
"Bug Tracker" = "https://github.com/STOCD/OSCR/issues"
"Website" = "https://stobuilds.com/apps/oscr"

[tool.hatch.build.targets.wheel]
packages = ["OSCR/"]

[project.scripts]
oscr-cli = "OSCR.cli:main"

[tool.hatch.version]
path = "OSCR/main.py"
pattern = "\\s*__version__ = '(?P<version>.*)'"
